<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    tools:context=".business.Autenticazione.Login">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageLogin"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/description_app"
                            android:textSize="15dp"
                            android:layout_gravity="center"
                            android:id="@+id/login_description"
                            android:paddingTop="10dp"
                            android:paddingBottom="20dp" />

                        <EditText
                            android:layout_width="286dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_email_login"
                            android:hint="@string/playsholder_email_login"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:imeOptions="actionDone"
                            android:singleLine="true" />

                        <EditText
                            android:layout_width="292dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_password_login"
                            android:inputType="textPassword"
                            android:hint="@string/playsholder_password_login"
                            android:layout_gravity="center_horizontal"
                            android:imeOptions="actionDone"
                            android:singleLine="true" />

                        <CheckBox
                            android:layout_width="211dp"
                            android:layout_height="wrap_content"
                            android:text="@string/check_login"
                            android:id="@+id/check_memorizza_login"
                            android:checked="false" />


                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_login"
                            android:id="@+id/button_login"
                            android:layout_marginTop="38dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="italic|bold"
                            android:textColor="@color/background"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/skip_login"
                            android:layout_marginTop="40dp"
                            android:id="@+id/skip_login"
                            android:onClick="skipAuthentication" />
                </LinearLayout>
        </ScrollView>
</LinearLayout>
